--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -120,4 +120,20 @@
       margin-left: 16px;
     }
   }
+
+  .new-room {
+    font-size: 24px;
+    margin: 64px 0 24px;
+    font-family: "Poppins", sans-serif;
+  }
+
+  .existing-room {
+    font-size: 14px;
+    color: #737380;
+    margin-top: 16px;
+
+    a {
+      color: #e559f9;
+    }
+  }
 }
