create admin room

--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -10,6 +10,19 @@
       justify-content: space-between;
       align-items: center;
 
+      > div {
+        display: flex;
+        align-items: center;
+        gap: 16px;
+
+        button:last-child {
+          height: 40px;
+          background: #fff;
+          border: 1px solid #835afd;
+          color: #835afd;
+        }
+      }
+
       > img {
         max-height: 45px;
       }
