--- a/src/styles/question.scss
+++ b/src/styles/question.scss
@@ -35,6 +35,11 @@
       }
     }
 
+    > div {
+      display: flex;
+      gap: 16px;
+    }
+
     button {
       border: 0;
       background: transparent;
@@ -60,5 +65,21 @@
         filter: brightness(0.7);
       }
     }
+  }
+
+  &.highlighted {
+    background: #f4f0ff;
+    border: 1px solid #835afd;
+
+    footer {
+      .user-info span {
+        color: #29292e;
+      }
+    }
+  }
+
+  &.answered {
+    background: #dbdcdd;
+    border: 0;
   }
 }
